--- a/templates/inquiry-received.mjml
+++ b/templates/inquiry-received.mjml
@@ -2,17 +2,33 @@
   <mj-body background-color="#ffffff" font-size="13px">
     <mj-section background-color="#009FE3" vertical-align="top" padding-bottom="0px" padding-top="0">
       <mj-column vertical-align="top" width="100%">
-        <mj-text align="left" color="#ffffff" font-size="45px" font-weight="bold" font-family="open Sans Helvetica, Arial, sans-serif" padding-left="25px" padding-right="25px" padding-bottom="30px" padding-top="50px">Добре дошъл в Подкрепи.бг</mj-text>
+        <mj-text align="left" color="#ffffff" font-size="45px" font-weight="bold" font-family="open Sans Helvetica, Arial, sans-serif" padding-left="25px" padding-right="25px" padding-bottom="30px" padding-top="50px">
+          Получено съобщение в Подкрепи.бг
+        </mj-text>
       </mj-column>
     </mj-section>
     <mj-section background-color="#009fe3" padding-bottom="20px" padding-top="20px">
       <mj-column vertical-align="middle" width="100%">
         <mj-text align="left" color="#ffffff" font-size="22px" font-family="open Sans Helvetica, Arial, sans-serif" padding-left="25px" padding-right="25px">
-          <span style="color:#FEEB35">Здравей {{person.firstName}},</span>
+          <span style="color:#FEEB35">
+            Здравейте {{person.firstName}},
+          </span>
           <br /><br />
         </mj-text>
-        <mj-text align="left" color="#ffffff" font-size="15px" font-family="open Sans Helvetica, Arial, sans-serif" padding-left="25px" padding-right="25px">We&apos;re really excited you&apos;ve decided to give us a try. In case you have any questions, feel free to reach out to us at [[ContactEmail]]. You can login to your account with your username [[UserName]]</mj-text>
-        <mj-text align="left" color="#ffffff" font-size="15px" font-family="open Sans Helvetica, Arial, sans-serif" padding-left="25px" padding-right="25px">Thanks, <br /> The {{companyName}} Team</mj-text>
+        <mj-text align="left" color="#ffffff" font-size="15px" font-family="open Sans Helvetica, Arial, sans-serif" padding-left="25px" padding-right="25px">
+          Това е автоматичен e-mail, който потвърждава, че сме получили вашето запитване:
+
+          <br /><br />
+
+          <i>"{{message}}"</i>
+
+          <br /><br />
+
+          Благодарим за съобщението, ще Ви отговорим възможно най-скоро.
+        </mj-text>
+        <mj-text align="left" color="#ffffff" font-size="15px" font-family="open Sans Helvetica, Arial, sans-serif" padding-left="25px" padding-right="25px">
+          Поздрави, <br />
+          Екипът на Подкрепи.бг</mj-text>
       </mj-column>
     </mj-section>
   </mj-body>
