--- a/templates/inquiry-received.mjml
+++ b/templates/inquiry-received.mjml
@@ -1,21 +1,44 @@
 <mjml>
   <mj-body background-color="#ffffff" font-size="13px">
-    <mj-section background-color="#009FE3" vertical-align="top" padding-bottom="0px" padding-top="0">
+    <mj-section
+      background-color="#009FE3"
+      vertical-align="top"
+      padding-bottom="0px"
+      padding-top="0">
       <mj-column vertical-align="top" width="100%">
-        <mj-text align="left" color="#ffffff" font-size="45px" font-weight="bold" font-family="open Sans Helvetica, Arial, sans-serif" padding-left="25px" padding-right="25px" padding-bottom="30px" padding-top="50px">
+        <mj-text
+          align="left"
+          color="#ffffff"
+          font-size="45px"
+          font-weight="bold"
+          font-family="open Sans Helvetica, Arial, sans-serif"
+          padding-left="25px"
+          padding-right="25px"
+          padding-bottom="30px"
+          padding-top="50px">
           Получено съобщение в Подкрепи.бг
         </mj-text>
       </mj-column>
     </mj-section>
     <mj-section background-color="#009fe3" padding-bottom="20px" padding-top="20px">
       <mj-column vertical-align="middle" width="100%">
-        <mj-text align="left" color="#ffffff" font-size="22px" font-family="open Sans Helvetica, Arial, sans-serif" padding-left="25px" padding-right="25px">
-          <span style="color:#FEEB35">
-            Здравейте {{person.firstName}},
-          </span>
+        <mj-text
+          align="left"
+          color="#ffffff"
+          font-size="22px"
+          font-family="open Sans Helvetica, Arial, sans-serif"
+          padding-left="25px"
+          padding-right="25px">
+          <span style="color: #feeb35"> Здравейте {{person.firstName}}, </span>
           <br /><br />
         </mj-text>
-        <mj-text align="left" color="#ffffff" font-size="15px" font-family="open Sans Helvetica, Arial, sans-serif" padding-left="25px" padding-right="25px">
+        <mj-text
+          align="left"
+          color="#ffffff"
+          font-size="15px"
+          font-family="open Sans Helvetica, Arial, sans-serif"
+          padding-left="25px"
+          padding-right="25px">
           Това е автоматичен e-mail, който потвърждава, че сме получили вашето запитване:
 
           <br /><br />
@@ -26,9 +49,16 @@
 
           Благодарим за съобщението, ще Ви отговорим възможно най-скоро.
         </mj-text>
-        <mj-text align="left" color="#ffffff" font-size="15px" font-family="open Sans Helvetica, Arial, sans-serif" padding-left="25px" padding-right="25px">
+        <mj-text
+          align="left"
+          color="#ffffff"
+          font-size="15px"
+          font-family="open Sans Helvetica, Arial, sans-serif"
+          padding-left="25px"
+          padding-right="25px">
           Поздрави, <br />
-          Екипът на Подкрепи.бг</mj-text>
+          Екипът на Подкрепи.бг</mj-text
+        >
       </mj-column>
     </mj-section>
   </mj-body>
