--- a/apps/api/src/assets/templates/inquiry-received-internal.mjml
+++ b/apps/api/src/assets/templates/inquiry-received-internal.mjml
@@ -4,7 +4,8 @@
       background-color="#009FE3"
       vertical-align="top"
       padding-bottom="0px"
-      padding-top="0">
+      padding-top="0"
+    >
       <mj-column vertical-align="top" width="100%">
         <mj-text
           align="left"
@@ -15,12 +16,17 @@
           padding-left="25px"
           padding-right="25px"
           padding-bottom="30px"
-          padding-top="50px">
+          padding-top="50px"
+        >
           Получено ново запитване в Подкрепи.бг
         </mj-text>
       </mj-column>
     </mj-section>
-    <mj-section background-color="#009fe3" padding-bottom="20px" padding-top="20px">
+    <mj-section
+      background-color="#009fe3"
+      padding-bottom="20px"
+      padding-top="20px"
+    >
       <mj-column vertical-align="middle" width="100%">
         <mj-text
           align="left"
@@ -28,9 +34,11 @@
           font-size="15px"
           font-family="open Sans Helvetica, Arial, sans-serif"
           padding-left="25px"
-          padding-right="25px">
-          Това е автоматичен e-mail, който известява, че е получено ново запитване от {{firstName}}
-          {{lastName}} <a href="mailto:{{email}}">{{email}}</a> <br /><br />
+          padding-right="25px"
+        >
+          Това е автоматичен e-mail, който известява, че е получено ново
+          запитване от {{firstName}} {{lastName}}
+          <a href="mailto:{{email}}">{{email}}</a> <br /><br />
           <i>"{{message}}"</i>
         </mj-text>
       </mj-column>
