--- a/apps/api/src/assets/templates/welcome.mjml
+++ b/apps/api/src/assets/templates/welcome.mjml
@@ -4,8 +4,7 @@
       background-color="#009FE3"
       vertical-align="top"
       padding-bottom="0px"
-      padding-top="0"
-    >
+      padding-top="0">
       <mj-column vertical-align="top" width="100%">
         <mj-text
           align="left"
@@ -16,17 +15,12 @@
           padding-left="25px"
           padding-right="25px"
           padding-bottom="30px"
-          padding-top="50px"
-        >
+          padding-top="50px">
           Добре дошъл в Подкрепи.бг
         </mj-text>
       </mj-column>
     </mj-section>
-    <mj-section
-      background-color="#009fe3"
-      padding-bottom="20px"
-      padding-top="20px"
-    >
+    <mj-section background-color="#009fe3" padding-bottom="20px" padding-top="20px">
       <mj-column vertical-align="middle" width="100%">
         <mj-text
           align="left"
@@ -34,8 +28,7 @@
           font-size="22px"
           font-family="open Sans Helvetica, Arial, sans-serif"
           padding-left="25px"
-          padding-right="25px"
-        >
+          padding-right="25px">
           <span style="color: #feeb35"> Здравейте {{person.firstName}}, </span>
           <br /><br />
         </mj-text>
@@ -45,19 +38,14 @@
           font-size="15px"
           font-family="open Sans Helvetica, Arial, sans-serif"
           padding-left="25px"
-          padding-right="25px"
-        >
-          Благодарим, че проявихте интерес и желание да се включите с помощ в
-          проекта!<br /><br />
+          padding-right="25px">
+          Благодарим, че проявихте интерес и желание да се включите с помощ в проекта!<br /><br />
           Предлагаме да продължим комуникацията в
-          <a href="https://discord.gg/pwkfzvPBSm" target="_blank"
-            >Discord сървъра</a
-          >, където се помещава нашият виртуален офис. Съветът ни е да прочетете
-          внимателно какво пише на началната страница в канал #започни-от-тук.
-          <br /><br />
-          След това може да се включите в дискусиите и Ви чакаме на обща среща в
-          понеделник от 18:30 ч. в гласовия канал #обща-среща-пон-18:30 на
-          сървъра. <br /><br />
+          <a href="https://discord.gg/pwkfzvPBSm" target="_blank">Discord сървъра</a>, където се
+          помещава нашият виртуален офис. Съветът ни е да прочетете внимателно какво пише на
+          началната страница в канал #започни-от-тук. <br /><br />
+          След това може да се включите в дискусиите и Ви чакаме на обща среща в понеделник от 18:30
+          ч. в гласовия канал #обща-среща-пон-18:30 на сървъра. <br /><br />
           Още веднъж благодарим за готовността да помогнете за нашата кауза!
         </mj-text>
         <mj-text
@@ -66,8 +54,7 @@
           font-size="15px"
           font-family="open Sans Helvetica, Arial, sans-serif"
           padding-left="25px"
-          padding-right="25px"
-        >
+          padding-right="25px">
           Поздрави, <br />
           Екипът на Подкрепи.бг
         </mj-text>
