--- a/apps/api/src/assets/templates/inquiry-received.mjml
+++ b/apps/api/src/assets/templates/inquiry-received.mjml
@@ -4,8 +4,7 @@
       background-color="#009FE3"
       vertical-align="top"
       padding-bottom="0px"
-      padding-top="0"
-    >
+      padding-top="0">
       <mj-column vertical-align="top" width="100%">
         <mj-text
           align="left"
@@ -16,17 +15,12 @@
           padding-left="25px"
           padding-right="25px"
           padding-bottom="30px"
-          padding-top="50px"
-        >
+          padding-top="50px">
           Получено съобщение в Подкрепи.бг
         </mj-text>
       </mj-column>
     </mj-section>
-    <mj-section
-      background-color="#009fe3"
-      padding-bottom="20px"
-      padding-top="20px"
-    >
+    <mj-section background-color="#009fe3" padding-bottom="20px" padding-top="20px">
       <mj-column vertical-align="middle" width="100%">
         <mj-text
           align="left"
@@ -34,8 +28,7 @@
           font-size="22px"
           font-family="open Sans Helvetica, Arial, sans-serif"
           padding-left="25px"
-          padding-right="25px"
-        >
+          padding-right="25px">
           <span style="color: #feeb35"> Здравейте {{firstName}}, </span>
           <br /><br />
         </mj-text>
@@ -45,10 +38,8 @@
           font-size="15px"
           font-family="open Sans Helvetica, Arial, sans-serif"
           padding-left="25px"
-          padding-right="25px"
-        >
-          Това е автоматичен e-mail, който потвърждава, че сме получили вашето
-          запитване:
+          padding-right="25px">
+          Това е автоматичен e-mail, който потвърждава, че сме получили вашето запитване:
 
           <br /><br />
 
@@ -64,8 +55,7 @@
           font-size="15px"
           font-family="open Sans Helvetica, Arial, sans-serif"
           padding-left="25px"
-          padding-right="25px"
-        >
+          padding-right="25px">
           Поздрави, <br />
           Екипът на Подкрепи.бг</mj-text
         >
