:bug: welcome email link visibility fixed

--- a/apps/api/src/assets/templates/welcome.mjml
+++ b/apps/api/src/assets/templates/welcome.mjml
@@ -41,9 +41,10 @@
           padding-right="25px">
           Благодарим, че проявихте интерес и желание да се включите с помощ в проекта!<br /><br />
           Предлагаме да продължим комуникацията в
-          <a href="https://discord.gg/pwkfzvPBSm" target="_blank">Discord сървъра</a>, където се
-          помещава нашият виртуален офис. Съветът ни е да прочетете внимателно какво пише на
-          началната страница в канал #започни-от-тук. <br /><br />
+          <a style="color: #feeb35" href="https://discord.gg/pwkfzvPBSm" target="_blank"
+            >Discord сървъра</a
+          >, където се помещава нашият виртуален офис. Съветът ни е да прочетете внимателно какво
+          пише на началната страница в канал #започни-от-тук. <br /><br />
           След това може да се включите в дискусиите и Ви чакаме на обща среща в понеделник от 18:30
           ч. в гласовия канал #обща-среща-пон-18:30 на сървъра. <br /><br />
           Още веднъж благодарим за готовността да помогнете за нашата кауза!
