--- a/apps/api/src/assets/templates/welcome.mjml
+++ b/apps/api/src/assets/templates/welcome.mjml
@@ -41,7 +41,7 @@
           padding-right="25px">
           Благодарим, че проявихте интерес и желание да се включите с помощ в проекта!<br /><br />
           Предлагаме да продължим комуникацията в
-          <a style="color: #feeb35" href="https://discord.gg/pwkfzvPBSm" target="_blank"
+          <a style="color: #feeb35" href="https://discord.gg/3FBXDPjXEp" target="_blank"
             >Discord сървъра</a
           >, където се помещава нашият виртуален офис. Съветът ни е да прочетете внимателно какво
           пише на началната страница в канал #започни-от-тук. <br /><br />
