template change requested

--- a/apps/api/src/assets/templates/forgot-password.mjml
+++ b/apps/api/src/assets/templates/forgot-password.mjml
@@ -26,8 +26,8 @@
           padding-left="25px"
           padding-right="25px">
           някой (може би Вие) е пуснал заявка за смяна на парола за достъп до Подкрепи.бг.<br /><br />
-          Ако не сте пускали подобна заявка, не е необходимо да правите каквото и да е било.<br /><br />
-          Ако Вие сте поискали възстановяване на паролата, избере бутона „Нова парола“.<br /><br />
+          Ако не сте пускали подобна заявка, не е необходимо да правите нищо.<br /><br />
+          Ако Вие сте поискали възстановяване на паролата, натиснете бутона „Нова парола“.<br /><br />
         </mj-text>
         <mj-button
           align="center"
