--- a/apps/api/src/assets/templates/expiring-iris-consent.mjml
+++ b/apps/api/src/assets/templates/expiring-iris-consent.mjml
@@ -1,5 +1,5 @@
 <mjml>
-  <mj-body background-color="#ffffff" font-size="13px">
+  <mj-body background-color="#ffffff" font-size="13px" width="90%">
     <mj-section
       background-color="#009FE3"
       vertical-align="top"
@@ -16,7 +16,7 @@
           padding-right="25px"
           padding-bottom="30px"
           padding-top="50px">
-          Засечени са неразпознати банкови дарения
+          Изтичащо съгласие за достъп до банкова информация
         </mj-text>
       </mj-column>
     </mj-section>
@@ -34,7 +34,7 @@
         <mj-text
           align="left"
           color="#ffffff"
-          font-size="15px"
+          font-size="18px"
           font-family="open Sans Helvetica, Arial, sans-serif"
           padding-left="25px"
           padding-right="25px">
@@ -47,7 +47,7 @@
         <mj-button
           background-color="#feeb35"
           font-family="Helvetica, Arial, sans-serif"
-          font-size="16px"
+          font-size="17px"
           border-radius="30px"
           color="#000000"
           padding="15px 30px"
