--- a/apps/api/src/assets/templates/refund-donation.mjml
+++ b/apps/api/src/assets/templates/refund-donation.mjml
@@ -39,7 +39,7 @@
           font-family="open Sans Helvetica, Arial, sans-serif"
           padding-left="25px"
           padding-right="25px">
-          Това е автоматичен e-mail, който потвърждава, че ще получите обратно парите от <br />
+          Това е автоматичен e-mail, който потвърждава, че ще получите обратно парите от
           вашето дарение към кампанията {{campaignName}}. <br />
           За съжаление, поради ограничения на Stripe, не можем да ви възстановим таксите, които са
           удържани от тях. <br /><br />
