--- a/apps/api/src/assets/templates/welcome.mjml
+++ b/apps/api/src/assets/templates/welcome.mjml
@@ -9,7 +9,7 @@
         <mj-text
           align="left"
           color="#ffffff"
-          font-size="45px"
+          font-size="35px"
           font-weight="bold"
           font-family="open Sans Helvetica, Arial, sans-serif"
           padding-left="25px"
@@ -45,8 +45,8 @@
             >Discord сървъра</a
           >, където се помещава нашият виртуален офис. Съветът ни е да прочетете внимателно какво
           пише на началната страница в канал #започни-от-тук. <br /><br />
-          След това може да се включите в дискусиите и Ви чакаме на обща среща в понеделник от 18:30
-          ч. в гласовия канал #обща-среща-пон-18:30 на сървъра. <br /><br />
+          След това може да се включите в дискусиите и Ви чакаме на обща среща всяка сряда от 19:00
+          ч. в гласовия канал #обща-среща-сряда-19ч на сървъра. <br /><br />
           Още веднъж благодарим за готовността да помогнете за нашата кауза!
         </mj-text>
         <mj-text
