--- a/apps/api/src/assets/templates/refund-donation.mjml
+++ b/apps/api/src/assets/templates/refund-donation.mjml
@@ -39,16 +39,16 @@
           font-family="open Sans Helvetica, Arial, sans-serif"
           padding-left="25px"
           padding-right="25px">
-          Това е автоматичен e-mail, който потвърждава, че ще получите обратно парите от
-          вашето дарение към кампанията {{campaignName}}. <br />
+          Това е автоматичен e-mail, който потвърждава, че ще получите обратно парите от вашето
+          дарение към кампанията {{campaignName}}. <br />
           За съжаление, поради ограничения на Stripe, не можем да ви възстановим таксите, които са
           удържани от тях. <br /><br />
 
           Допълнителни подробности:<br />
           Сумата която ще възстановим е на стойност {{netAmount}} {{currency}}.<br />
           Таксата удържана от Stripe е на стойност {{taxAmount}} {{currency}}<br />
-          Транзакцията ще отнеме от 5 до 10 дни и парите ви ще бъдат върнати по същия начин, по
-          който са били получени. <br /><br />
+          Транзакцията ще отнеме от 5 до 10 дни и парите ще ви бъдат върнати към същата карта, с
+          която сте превели дарението към Страйп. <br /><br />
 
           Благодарим ви за разбирането!
         </mj-text>
