--- a/apps/api/src/assets/templates/forgot-password.mjml
+++ b/apps/api/src/assets/templates/forgot-password.mjml
@@ -15,7 +15,7 @@
           font-family="open Sans Helvetica, Arial, sans-serif"
           padding-left="25px"
           padding-right="25px">
-          <span style="color: #feeb35"> Здравейте {{firstName}} {{lastName}}, </span>
+          <span style="color: #feeb35"> Здравейте, {{firstName}} {{lastName}}, </span>
           <br /><br />
         </mj-text>
         <mj-text
@@ -25,7 +25,7 @@
           font-family="open Sans Helvetica, Arial, sans-serif"
           padding-left="25px"
           padding-right="25px">
-          някой (може би Вие) е пуснал заявка за смяна на парола за достъп до Подкрепи.бг.<br /><br />
+          Някой (може би Вие) е пуснал заявка за смяна на паролата Ви за достъп до Подкрепи.бг.<br /><br />
           Ако не сте пускали подобна заявка, не е необходимо да правите нищо.<br /><br />
           Ако Вие сте поискали възстановяване на паролата, натиснете бутона „Нова парола“.<br /><br />
         </mj-text>
