--- a/apps/api/src/assets/templates/create-campaign-application-organizer.mjml
+++ b/apps/api/src/assets/templates/create-campaign-application-organizer.mjml
@@ -12,7 +12,7 @@
           padding-right="25px"
           padding-bottom="30px"
           padding-top="50px">
-          Успешно създадохте кампания в Подкрепи.бг
+          Потвърждение за получаване на заявка за дарителска кампания
         </mj-text>
       </mj-column>
     </mj-section>
@@ -25,7 +25,7 @@
           font-family="open Sans Helvetica, Arial, sans-serif"
           padding-left="25px"
           padding-right="25px">
-          <span style="color: #feeb35"> Здравейте {{firstName}}, </span>
+          <span style="color: #feeb35"> Здравейте, {{firstName}}, </span>
           <br /><br />
         </mj-text>
         <mj-text
@@ -35,11 +35,20 @@
           font-family="open Sans Helvetica, Arial, sans-serif"
           padding-left="25px"
           padding-right="25px">
-          Вашата кампания е създадена успешно! Вижте я
+          Благодарим Ви, че подадохте заявка за кампания на платформата Подкрепи.бг!<br />Можете да
+          я прегледате
           <a style="color: #feeb35" href="{{campaignApplicationLink}}" target="_blank">ТУК</a
-          >!<br /><br />
+          >.<br /><br />
 
-          Пожелаваме успешно набиране на средствата!
+          Искаме да Ви уверим, че заявката Ви е успешно получена и ще бъде разгледана от екипа ни в
+          най-кратък срок. Ако има нужда от допълнителна информация или уточнения, член на екип
+          „Кампании“ ще се свърже с Вас.<br /><br />
+
+          Междувременно, ако имате въпроси или желаете да предоставите допълнителни детайли за
+          кампанията, можете да се свържете с нас на следния имейл:
+          <a style="color: #feeb35" href="mailto:campaign_coordinators@podkrepi.bg" target="_blank"
+            >campaign_coordinators@podkrepi.bg</a
+          >. Благодарим Ви, че заедно правим добро!<br /><br />
         </mj-text>
         <mj-text
           align="left"
@@ -48,7 +57,7 @@
           font-family="open Sans Helvetica, Arial, sans-serif"
           padding-left="25px"
           padding-right="25px">
-          Поздрави, <br />
+          С уважение, <br />
           Екипът на Подкрепи.бг
         </mj-text>
       </mj-column>
